# CS236_Project5

./: Automaton.h  CMakeLists.txt  Database.h  DatalogProgram.h  FSA_Add.h  FSA_Comma.h  FSA_Comment.h  FSA_Facts.h  FSA_ID.h  FSA_L_Paren.h  FSA_Multiply.h  FSA_Period.h  FSA_Q_Mark.h  FSA_Queries.h  FSA_R_Paren.h  FSA_Rules.h  FSA_Schemes.h  FSA_String.h  Graph.h  Header.h  Interpreter.h  KeyValues.h  Lexer.cpp  Lexer.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Parsey.cpp  Parsey.h  Predicate.cpp  Predicate.h  Relation.h  Rule.cpp  Rule.h  StringInts.h  Token.cpp  Token.h  Tuple.h  Undefined.h  (+2 more)
